feat: implement base table controllers and report list views for kegiatan, tamu, and undangan modules